parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    WHITE_SPACE

Grammar

Rule 0     S' -> program
Rule 1     program -> classes
Rule 2     classes -> classes class SEMICOLON
Rule 3     classes -> class SEMICOLON
Rule 4     class -> CLASS TYPE LBRACKET features_opt RBRACKET
Rule 5     class -> CLASS TYPE INHERITS TYPE LBRACKET features_opt RBRACKET
Rule 6     features_opt -> features
Rule 7     features_opt -> empty
Rule 8     features -> features feature SEMICOLON
Rule 9     features -> feature SEMICOLON
Rule 10    feature -> ID LPAREN formal_params RPAREN COLON TYPE LBRACKET expression RBRACKET
Rule 11    feature -> ID LPAREN RPAREN COLON TYPE LBRACKET expression RBRACKET
Rule 12    feature -> ID COLON TYPE ASSIGNMENT expression
Rule 13    feature -> ID COLON TYPE
Rule 14    formal_params -> formal_params COMMA formal
Rule 15    formal_params -> formal
Rule 16    formal -> ID COLON TYPE
Rule 17    expression -> ID ASSIGNMENT expression
Rule 18    expression -> ID
Rule 19    expression -> INTEGER
Rule 20    expression -> STRING
Rule 21    expression -> TRUE
Rule 22    expression -> FALSE
Rule 23    expression -> SELF
Rule 24    expression -> LBRACKET block_expr RBRACKET
Rule 25    block_expr -> block_expr expression SEMICOLON
Rule 26    block_expr -> expression SEMICOLON
Rule 27    expression -> expression DOT ID LPAREN arguments_opt RPAREN
Rule 28    arguments_opt -> arguments
Rule 29    arguments_opt -> empty
Rule 30    arguments -> arguments COMMA expression
Rule 31    arguments -> expression
Rule 32    expression -> expression AT TYPE DOT ID LPAREN arguments_opt RPAREN
Rule 33    expression -> ID LPAREN arguments_opt RPAREN
Rule 34    expression -> expression PLUS expression
Rule 35    expression -> expression MINUS expression
Rule 36    expression -> expression TIMES expression
Rule 37    expression -> expression DIVIDE expression
Rule 38    expression -> LPAREN expression RPAREN
Rule 39    expression -> expression LESSTHAN expression
Rule 40    expression -> expression LESSOREQUAL expression
Rule 41    expression -> expression EQUALS expression
Rule 42    expression -> IF expression THEN expression ELSE expression FI
Rule 43    expression -> WHILE expression LOOP expression POOL
Rule 44    expression -> NEW TYPE
Rule 45    expression -> ISVOID expression
Rule 46    expression -> TILDE expression
Rule 47    expression -> NOT expression
Rule 48    expression -> CASE expression OF actions ESAC
Rule 49    actions -> actions action
Rule 50    actions -> action
Rule 51    action -> ID COLON TYPE ARROW expression SEMICOLON
Rule 52    expression -> LET let_params IN expression
Rule 53    let_params -> let_params COMMA inner_let
Rule 54    let_params -> inner_let
Rule 55    inner_let -> ID COLON TYPE ASSIGNMENT expression
Rule 56    inner_let -> ID COLON TYPE
Rule 57    empty -> <empty>

Terminals, with rules where they appear

ARROW                : 51
ASSIGNMENT           : 12 17 55
AT                   : 32
CASE                 : 48
CLASS                : 4 5
COLON                : 10 11 12 13 16 51 55 56
COMMA                : 14 30 53
DIVIDE               : 37
DOT                  : 27 32
ELSE                 : 42
EQUALS               : 41
ESAC                 : 48
FALSE                : 22
FI                   : 42
ID                   : 10 11 12 13 16 17 18 27 32 33 51 55 56
IF                   : 42
IN                   : 52
INHERITS             : 5
INTEGER              : 19
ISVOID               : 45
LBRACKET             : 4 5 10 11 24
LESSOREQUAL          : 40
LESSTHAN             : 39
LET                  : 52
LOOP                 : 43
LPAREN               : 10 11 27 32 33 38
MINUS                : 35
NEW                  : 44
NOT                  : 47
OF                   : 48
PLUS                 : 34
POOL                 : 43
RBRACKET             : 4 5 10 11 24
RPAREN               : 10 11 27 32 33 38
SELF                 : 23
SEMICOLON            : 2 3 8 9 25 26 51
STRING               : 20
THEN                 : 42
TILDE                : 46
TIMES                : 36
TRUE                 : 21
TYPE                 : 4 5 5 10 11 12 13 16 32 44 51 55 56
WHILE                : 43
WHITE_SPACE          : 
error                : 

Nonterminals, with rules where they appear

action               : 49 50
actions              : 48 49
arguments            : 28 30
arguments_opt        : 27 32 33
block_expr           : 24 25
class                : 2 3
classes              : 1 2
empty                : 7 29
expression           : 10 11 12 17 25 26 27 30 31 32 34 34 35 35 36 36 37 37 38 39 39 40 40 41 41 42 42 42 43 43 45 46 47 48 51 52 55
feature              : 8 9
features             : 6 8
features_opt         : 4 5
formal               : 14 15
formal_params        : 10 14
inner_let            : 53 54
let_params           : 52 53
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . classes
    (2) classes -> . classes class SEMICOLON
    (3) classes -> . class SEMICOLON
    (4) class -> . CLASS TYPE LBRACKET features_opt RBRACKET
    (5) class -> . CLASS TYPE INHERITS TYPE LBRACKET features_opt RBRACKET

    CLASS           shift and go to state 4

    program                        shift and go to state 1
    classes                        shift and go to state 2
    class                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> classes .
    (2) classes -> classes . class SEMICOLON
    (4) class -> . CLASS TYPE LBRACKET features_opt RBRACKET
    (5) class -> . CLASS TYPE INHERITS TYPE LBRACKET features_opt RBRACKET

    $end            reduce using rule 1 (program -> classes .)
    CLASS           shift and go to state 4

    class                          shift and go to state 5

state 3

    (3) classes -> class . SEMICOLON

    SEMICOLON       shift and go to state 6


state 4

    (4) class -> CLASS . TYPE LBRACKET features_opt RBRACKET
    (5) class -> CLASS . TYPE INHERITS TYPE LBRACKET features_opt RBRACKET

    TYPE            shift and go to state 7


state 5

    (2) classes -> classes class . SEMICOLON

    SEMICOLON       shift and go to state 8


state 6

    (3) classes -> class SEMICOLON .

    CLASS           reduce using rule 3 (classes -> class SEMICOLON .)
    $end            reduce using rule 3 (classes -> class SEMICOLON .)


state 7

    (4) class -> CLASS TYPE . LBRACKET features_opt RBRACKET
    (5) class -> CLASS TYPE . INHERITS TYPE LBRACKET features_opt RBRACKET

    LBRACKET        shift and go to state 9
    INHERITS        shift and go to state 10


state 8

    (2) classes -> classes class SEMICOLON .

    CLASS           reduce using rule 2 (classes -> classes class SEMICOLON .)
    $end            reduce using rule 2 (classes -> classes class SEMICOLON .)


state 9

    (4) class -> CLASS TYPE LBRACKET . features_opt RBRACKET
    (6) features_opt -> . features
    (7) features_opt -> . empty
    (8) features -> . features feature SEMICOLON
    (9) features -> . feature SEMICOLON
    (57) empty -> .
    (10) feature -> . ID LPAREN formal_params RPAREN COLON TYPE LBRACKET expression RBRACKET
    (11) feature -> . ID LPAREN RPAREN COLON TYPE LBRACKET expression RBRACKET
    (12) feature -> . ID COLON TYPE ASSIGNMENT expression
    (13) feature -> . ID COLON TYPE

    RBRACKET        reduce using rule 57 (empty -> .)
    ID              shift and go to state 15

    features_opt                   shift and go to state 11
    features                       shift and go to state 12
    empty                          shift and go to state 13
    feature                        shift and go to state 14

state 10

    (5) class -> CLASS TYPE INHERITS . TYPE LBRACKET features_opt RBRACKET

    TYPE            shift and go to state 16


state 11

    (4) class -> CLASS TYPE LBRACKET features_opt . RBRACKET

    RBRACKET        shift and go to state 17


state 12

    (6) features_opt -> features .
    (8) features -> features . feature SEMICOLON
    (10) feature -> . ID LPAREN formal_params RPAREN COLON TYPE LBRACKET expression RBRACKET
    (11) feature -> . ID LPAREN RPAREN COLON TYPE LBRACKET expression RBRACKET
    (12) feature -> . ID COLON TYPE ASSIGNMENT expression
    (13) feature -> . ID COLON TYPE

    RBRACKET        reduce using rule 6 (features_opt -> features .)
    ID              shift and go to state 15

    feature                        shift and go to state 18

state 13

    (7) features_opt -> empty .

    RBRACKET        reduce using rule 7 (features_opt -> empty .)


state 14

    (9) features -> feature . SEMICOLON

    SEMICOLON       shift and go to state 19


state 15

    (10) feature -> ID . LPAREN formal_params RPAREN COLON TYPE LBRACKET expression RBRACKET
    (11) feature -> ID . LPAREN RPAREN COLON TYPE LBRACKET expression RBRACKET
    (12) feature -> ID . COLON TYPE ASSIGNMENT expression
    (13) feature -> ID . COLON TYPE

    LPAREN          shift and go to state 20
    COLON           shift and go to state 21


state 16

    (5) class -> CLASS TYPE INHERITS TYPE . LBRACKET features_opt RBRACKET

    LBRACKET        shift and go to state 22


state 17

    (4) class -> CLASS TYPE LBRACKET features_opt RBRACKET .

    SEMICOLON       reduce using rule 4 (class -> CLASS TYPE LBRACKET features_opt RBRACKET .)


state 18

    (8) features -> features feature . SEMICOLON

    SEMICOLON       shift and go to state 23


state 19

    (9) features -> feature SEMICOLON .

    ID              reduce using rule 9 (features -> feature SEMICOLON .)
    RBRACKET        reduce using rule 9 (features -> feature SEMICOLON .)


state 20

    (10) feature -> ID LPAREN . formal_params RPAREN COLON TYPE LBRACKET expression RBRACKET
    (11) feature -> ID LPAREN . RPAREN COLON TYPE LBRACKET expression RBRACKET
    (14) formal_params -> . formal_params COMMA formal
    (15) formal_params -> . formal
    (16) formal -> . ID COLON TYPE

    RPAREN          shift and go to state 26
    ID              shift and go to state 24

    formal_params                  shift and go to state 25
    formal                         shift and go to state 27

state 21

    (12) feature -> ID COLON . TYPE ASSIGNMENT expression
    (13) feature -> ID COLON . TYPE

    TYPE            shift and go to state 28


state 22

    (5) class -> CLASS TYPE INHERITS TYPE LBRACKET . features_opt RBRACKET
    (6) features_opt -> . features
    (7) features_opt -> . empty
    (8) features -> . features feature SEMICOLON
    (9) features -> . feature SEMICOLON
    (57) empty -> .
    (10) feature -> . ID LPAREN formal_params RPAREN COLON TYPE LBRACKET expression RBRACKET
    (11) feature -> . ID LPAREN RPAREN COLON TYPE LBRACKET expression RBRACKET
    (12) feature -> . ID COLON TYPE ASSIGNMENT expression
    (13) feature -> . ID COLON TYPE

    RBRACKET        reduce using rule 57 (empty -> .)
    ID              shift and go to state 15

    features_opt                   shift and go to state 29
    features                       shift and go to state 12
    empty                          shift and go to state 13
    feature                        shift and go to state 14

state 23

    (8) features -> features feature SEMICOLON .

    ID              reduce using rule 8 (features -> features feature SEMICOLON .)
    RBRACKET        reduce using rule 8 (features -> features feature SEMICOLON .)


state 24

    (16) formal -> ID . COLON TYPE

    COLON           shift and go to state 30


state 25

    (10) feature -> ID LPAREN formal_params . RPAREN COLON TYPE LBRACKET expression RBRACKET
    (14) formal_params -> formal_params . COMMA formal

    RPAREN          shift and go to state 31
    COMMA           shift and go to state 32


state 26

    (11) feature -> ID LPAREN RPAREN . COLON TYPE LBRACKET expression RBRACKET

    COLON           shift and go to state 33


state 27

    (15) formal_params -> formal .

    RPAREN          reduce using rule 15 (formal_params -> formal .)
    COMMA           reduce using rule 15 (formal_params -> formal .)


state 28

    (12) feature -> ID COLON TYPE . ASSIGNMENT expression
    (13) feature -> ID COLON TYPE .

    ASSIGNMENT      shift and go to state 34
    SEMICOLON       reduce using rule 13 (feature -> ID COLON TYPE .)


state 29

    (5) class -> CLASS TYPE INHERITS TYPE LBRACKET features_opt . RBRACKET

    RBRACKET        shift and go to state 35


state 30

    (16) formal -> ID COLON . TYPE

    TYPE            shift and go to state 36


state 31

    (10) feature -> ID LPAREN formal_params RPAREN . COLON TYPE LBRACKET expression RBRACKET

    COLON           shift and go to state 37


state 32

    (14) formal_params -> formal_params COMMA . formal
    (16) formal -> . ID COLON TYPE

    ID              shift and go to state 24

    formal                         shift and go to state 38

state 33

    (11) feature -> ID LPAREN RPAREN COLON . TYPE LBRACKET expression RBRACKET

    TYPE            shift and go to state 39


state 34

    (12) feature -> ID COLON TYPE ASSIGNMENT . expression
    (17) expression -> . ID ASSIGNMENT expression
    (18) expression -> . ID
    (19) expression -> . INTEGER
    (20) expression -> . STRING
    (21) expression -> . TRUE
    (22) expression -> . FALSE
    (23) expression -> . SELF
    (24) expression -> . LBRACKET block_expr RBRACKET
    (27) expression -> . expression DOT ID LPAREN arguments_opt RPAREN
    (32) expression -> . expression AT TYPE DOT ID LPAREN arguments_opt RPAREN
    (33) expression -> . ID LPAREN arguments_opt RPAREN
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . LPAREN expression RPAREN
    (39) expression -> . expression LESSTHAN expression
    (40) expression -> . expression LESSOREQUAL expression
    (41) expression -> . expression EQUALS expression
    (42) expression -> . IF expression THEN expression ELSE expression FI
    (43) expression -> . WHILE expression LOOP expression POOL
    (44) expression -> . NEW TYPE
    (45) expression -> . ISVOID expression
    (46) expression -> . TILDE expression
    (47) expression -> . NOT expression
    (48) expression -> . CASE expression OF actions ESAC
    (52) expression -> . LET let_params IN expression

    ID              shift and go to state 40
    INTEGER         shift and go to state 42
    STRING          shift and go to state 43
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    SELF            shift and go to state 46
    LBRACKET        shift and go to state 47
    LPAREN          shift and go to state 48
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    NEW             shift and go to state 51
    ISVOID          shift and go to state 52
    TILDE           shift and go to state 53
    NOT             shift and go to state 54
    CASE            shift and go to state 55
    LET             shift and go to state 56

    expression                     shift and go to state 41

state 35

    (5) class -> CLASS TYPE INHERITS TYPE LBRACKET features_opt RBRACKET .

    SEMICOLON       reduce using rule 5 (class -> CLASS TYPE INHERITS TYPE LBRACKET features_opt RBRACKET .)


state 36

    (16) formal -> ID COLON TYPE .

    RPAREN          reduce using rule 16 (formal -> ID COLON TYPE .)
    COMMA           reduce using rule 16 (formal -> ID COLON TYPE .)


state 37

    (10) feature -> ID LPAREN formal_params RPAREN COLON . TYPE LBRACKET expression RBRACKET

    TYPE            shift and go to state 57


state 38

    (14) formal_params -> formal_params COMMA formal .

    RPAREN          reduce using rule 14 (formal_params -> formal_params COMMA formal .)
    COMMA           reduce using rule 14 (formal_params -> formal_params COMMA formal .)


state 39

    (11) feature -> ID LPAREN RPAREN COLON TYPE . LBRACKET expression RBRACKET

    LBRACKET        shift and go to state 58


state 40

    (17) expression -> ID . ASSIGNMENT expression
    (18) expression -> ID .
    (33) expression -> ID . LPAREN arguments_opt RPAREN

    ASSIGNMENT      shift and go to state 59
    DOT             reduce using rule 18 (expression -> ID .)
    AT              reduce using rule 18 (expression -> ID .)
    PLUS            reduce using rule 18 (expression -> ID .)
    MINUS           reduce using rule 18 (expression -> ID .)
    TIMES           reduce using rule 18 (expression -> ID .)
    DIVIDE          reduce using rule 18 (expression -> ID .)
    LESSTHAN        reduce using rule 18 (expression -> ID .)
    LESSOREQUAL     reduce using rule 18 (expression -> ID .)
    EQUALS          reduce using rule 18 (expression -> ID .)
    SEMICOLON       reduce using rule 18 (expression -> ID .)
    RPAREN          reduce using rule 18 (expression -> ID .)
    THEN            reduce using rule 18 (expression -> ID .)
    LOOP            reduce using rule 18 (expression -> ID .)
    OF              reduce using rule 18 (expression -> ID .)
    RBRACKET        reduce using rule 18 (expression -> ID .)
    COMMA           reduce using rule 18 (expression -> ID .)
    ELSE            reduce using rule 18 (expression -> ID .)
    POOL            reduce using rule 18 (expression -> ID .)
    FI              reduce using rule 18 (expression -> ID .)
    IN              reduce using rule 18 (expression -> ID .)
    LPAREN          shift and go to state 60


state 41

    (12) feature -> ID COLON TYPE ASSIGNMENT expression .
    (27) expression -> expression . DOT ID LPAREN arguments_opt RPAREN
    (32) expression -> expression . AT TYPE DOT ID LPAREN arguments_opt RPAREN
    (34) expression -> expression . PLUS expression
    (35) expression -> expression . MINUS expression
    (36) expression -> expression . TIMES expression
    (37) expression -> expression . DIVIDE expression
    (39) expression -> expression . LESSTHAN expression
    (40) expression -> expression . LESSOREQUAL expression
    (41) expression -> expression . EQUALS expression

    SEMICOLON       reduce using rule 12 (feature -> ID COLON TYPE ASSIGNMENT expression .)
    DOT             shift and go to state 61
    AT              shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    TIMES           shift and go to state 65
    DIVIDE          shift and go to state 66
    LESSTHAN        shift and go to state 67
    LESSOREQUAL     shift and go to state 68
    EQUALS          shift and go to state 69


state 42

    (19) expression -> INTEGER .

    DOT             reduce using rule 19 (expression -> INTEGER .)
    AT              reduce using rule 19 (expression -> INTEGER .)
    PLUS            reduce using rule 19 (expression -> INTEGER .)
    MINUS           reduce using rule 19 (expression -> INTEGER .)
    TIMES           reduce using rule 19 (expression -> INTEGER .)
    DIVIDE          reduce using rule 19 (expression -> INTEGER .)
    LESSTHAN        reduce using rule 19 (expression -> INTEGER .)
    LESSOREQUAL     reduce using rule 19 (expression -> INTEGER .)
    EQUALS          reduce using rule 19 (expression -> INTEGER .)
    SEMICOLON       reduce using rule 19 (expression -> INTEGER .)
    RPAREN          reduce using rule 19 (expression -> INTEGER .)
    THEN            reduce using rule 19 (expression -> INTEGER .)
    LOOP            reduce using rule 19 (expression -> INTEGER .)
    OF              reduce using rule 19 (expression -> INTEGER .)
    RBRACKET        reduce using rule 19 (expression -> INTEGER .)
    COMMA           reduce using rule 19 (expression -> INTEGER .)
    ELSE            reduce using rule 19 (expression -> INTEGER .)
    POOL            reduce using rule 19 (expression -> INTEGER .)
    FI              reduce using rule 19 (expression -> INTEGER .)
    IN              reduce using rule 19 (expression -> INTEGER .)


state 43

    (20) expression -> STRING .

    DOT             reduce using rule 20 (expression -> STRING .)
    AT              reduce using rule 20 (expression -> STRING .)
    PLUS            reduce using rule 20 (expression -> STRING .)
    MINUS           reduce using rule 20 (expression -> STRING .)
    TIMES           reduce using rule 20 (expression -> STRING .)
    DIVIDE          reduce using rule 20 (expression -> STRING .)
    LESSTHAN        reduce using rule 20 (expression -> STRING .)
    LESSOREQUAL     reduce using rule 20 (expression -> STRING .)
    EQUALS          reduce using rule 20 (expression -> STRING .)
    SEMICOLON       reduce using rule 20 (expression -> STRING .)
    RPAREN          reduce using rule 20 (expression -> STRING .)
    THEN            reduce using rule 20 (expression -> STRING .)
    LOOP            reduce using rule 20 (expression -> STRING .)
    OF              reduce using rule 20 (expression -> STRING .)
    RBRACKET        reduce using rule 20 (expression -> STRING .)
    COMMA           reduce using rule 20 (expression -> STRING .)
    ELSE            reduce using rule 20 (expression -> STRING .)
    POOL            reduce using rule 20 (expression -> STRING .)
    FI              reduce using rule 20 (expression -> STRING .)
    IN              reduce using rule 20 (expression -> STRING .)


state 44

    (21) expression -> TRUE .

    DOT             reduce using rule 21 (expression -> TRUE .)
    AT              reduce using rule 21 (expression -> TRUE .)
    PLUS            reduce using rule 21 (expression -> TRUE .)
    MINUS           reduce using rule 21 (expression -> TRUE .)
    TIMES           reduce using rule 21 (expression -> TRUE .)
    DIVIDE          reduce using rule 21 (expression -> TRUE .)
    LESSTHAN        reduce using rule 21 (expression -> TRUE .)
    LESSOREQUAL     reduce using rule 21 (expression -> TRUE .)
    EQUALS          reduce using rule 21 (expression -> TRUE .)
    SEMICOLON       reduce using rule 21 (expression -> TRUE .)
    RPAREN          reduce using rule 21 (expression -> TRUE .)
    THEN            reduce using rule 21 (expression -> TRUE .)
    LOOP            reduce using rule 21 (expression -> TRUE .)
    OF              reduce using rule 21 (expression -> TRUE .)
    RBRACKET        reduce using rule 21 (expression -> TRUE .)
    COMMA           reduce using rule 21 (expression -> TRUE .)
    ELSE            reduce using rule 21 (expression -> TRUE .)
    POOL            reduce using rule 21 (expression -> TRUE .)
    FI              reduce using rule 21 (expression -> TRUE .)
    IN              reduce using rule 21 (expression -> TRUE .)


state 45

    (22) expression -> FALSE .

    DOT             reduce using rule 22 (expression -> FALSE .)
    AT              reduce using rule 22 (expression -> FALSE .)
    PLUS            reduce using rule 22 (expression -> FALSE .)
    MINUS           reduce using rule 22 (expression -> FALSE .)
    TIMES           reduce using rule 22 (expression -> FALSE .)
    DIVIDE          reduce using rule 22 (expression -> FALSE .)
    LESSTHAN        reduce using rule 22 (expression -> FALSE .)
    LESSOREQUAL     reduce using rule 22 (expression -> FALSE .)
    EQUALS          reduce using rule 22 (expression -> FALSE .)
    SEMICOLON       reduce using rule 22 (expression -> FALSE .)
    RPAREN          reduce using rule 22 (expression -> FALSE .)
    THEN            reduce using rule 22 (expression -> FALSE .)
    LOOP            reduce using rule 22 (expression -> FALSE .)
    OF              reduce using rule 22 (expression -> FALSE .)
    RBRACKET        reduce using rule 22 (expression -> FALSE .)
    COMMA           reduce using rule 22 (expression -> FALSE .)
    ELSE            reduce using rule 22 (expression -> FALSE .)
    POOL            reduce using rule 22 (expression -> FALSE .)
    FI              reduce using rule 22 (expression -> FALSE .)
    IN              reduce using rule 22 (expression -> FALSE .)


state 46

    (23) expression -> SELF .

    DOT             reduce using rule 23 (expression -> SELF .)
    AT              reduce using rule 23 (expression -> SELF .)
    PLUS            reduce using rule 23 (expression -> SELF .)
    MINUS           reduce using rule 23 (expression -> SELF .)
    TIMES           reduce using rule 23 (expression -> SELF .)
    DIVIDE          reduce using rule 23 (expression -> SELF .)
    LESSTHAN        reduce using rule 23 (expression -> SELF .)
    LESSOREQUAL     reduce using rule 23 (expression -> SELF .)
    EQUALS          reduce using rule 23 (expression -> SELF .)
    SEMICOLON       reduce using rule 23 (expression -> SELF .)
    RPAREN          reduce using rule 23 (expression -> SELF .)
    THEN            reduce using rule 23 (expression -> SELF .)
    LOOP            reduce using rule 23 (expression -> SELF .)
    OF              reduce using rule 23 (expression -> SELF .)
    RBRACKET        reduce using rule 23 (expression -> SELF .)
    COMMA           reduce using rule 23 (expression -> SELF .)
    ELSE            reduce using rule 23 (expression -> SELF .)
    POOL            reduce using rule 23 (expression -> SELF .)
    FI              reduce using rule 23 (expression -> SELF .)
    IN              reduce using rule 23 (expression -> SELF .)


state 47

    (24) expression -> LBRACKET . block_expr RBRACKET
    (25) block_expr -> . block_expr expression SEMICOLON
    (26) block_expr -> . expression SEMICOLON
    (17) expression -> . ID ASSIGNMENT expression
    (18) expression -> . ID
    (19) expression -> . INTEGER
    (20) expression -> . STRING
    (21) expression -> . TRUE
    (22) expression -> . FALSE
    (23) expression -> . SELF
    (24) expression -> . LBRACKET block_expr RBRACKET
    (27) expression -> . expression DOT ID LPAREN arguments_opt RPAREN
    (32) expression -> . expression AT TYPE DOT ID LPAREN arguments_opt RPAREN
    (33) expression -> . ID LPAREN arguments_opt RPAREN
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . LPAREN expression RPAREN
    (39) expression -> . expression LESSTHAN expression
    (40) expression -> . expression LESSOREQUAL expression
    (41) expression -> . expression EQUALS expression
    (42) expression -> . IF expression THEN expression ELSE expression FI
    (43) expression -> . WHILE expression LOOP expression POOL
    (44) expression -> . NEW TYPE
    (45) expression -> . ISVOID expression
    (46) expression -> . TILDE expression
    (47) expression -> . NOT expression
    (48) expression -> . CASE expression OF actions ESAC
    (52) expression -> . LET let_params IN expression
